# Atabey

./: .gitignore  ADAPTIVE_PRUNING_SHADOW_AUDIT.md  AGENTS.md  ATABEY_ADVERSARIAL_BATTERY.md  ATABEY_SUN_CHECK_BOUNDED_AUDIT.md  CROSS_REPO_TRANSFER_IDEAS_FOR_ATABEY.md  OFFICIAL_DIVISION_METRIC_INTEGRATION.md  OFFICIAL_DIVISION_RECALIBRATION.md  OFFICIAL_EVALUATOR_PARITY_INVENTORY.md  PARALLEL_EVAL_NOTES.md  README.md  REPO_STATE_AUDIT_2026-07-16.md  RULE_BASED_CEILING_SUMMARY.md  SUN_CHECK_CFAR_FOLLOWUP_PREREGISTRATION.md  TODO.md  V17_GATE_TRACE_AUDIT.md  V18_COVERAGE_FORENSICS.md  V18_RUNTIME_DIAGNOSTIC.md  V20_BIPARTITE_FIREWALL_FIX_2026-07-16.md  V21_COUNTERFACTUAL_PAIRING_AUDIT.md  V21_DIVISION_RECOVERY_TRACK.md  V21_JOINT_SEMANTIC_ASSIGNMENT_DESIGN.md  V21_JOINT_SEMANTIC_PHASE0_AUDIT.md  V21_LINK_GATE_AUDIT.md  V21_LOCAL_ASSIGNMENT_SHADOW_AUDIT.md  V21_SEMANTIC_DATASET_PREREGISTRATION.md  V21_SEMANTIC_POSITIVE_AVAILABILITY_AUDIT.md  V21_SESSION_SYNTHESIS_2026-07-22.md  V21_TRACK_B_RANKING.md  V22_JOINT_SEMANTIC_ASSIGNMENT_PREREGISTRATION.md  V22_SAFE_DIVISION_SHADOW_AUDIT.md  V22_SAFE_DIVISION_SHADOW_PREREGISTRATION.md  V22_UNET_DETECTION_SHADOW_PREREGISTRATION.md  V22_UNET_DETECTION_SHADOW_RESULTS.md  V22_UNET_DEVELOPMENT_46_PREREGISTRATION.md  V22_UNET_DEVELOPMENT_46_RESULTS.md  V22_UNET_OFFICIAL_ACTION_AVAILABILITY_PREREGISTRATION.md  V22_UNET_OFFICIAL_ACTION_AVAILABILITY_RESULTS.md  adaptive_pruning_evidence_shadow_battery_13.csv  adaptive_pruning_shadow_13.csv  (+22 more)
docs/: ADR-001-project-scope.md  ADR-002-timepoint-streaming-design.md  ADR-003-physical-voxel-distance-normalization.md  ADR-004-latent-cell-candidates.md  BASELINE_RUNS.md  VISION.md  (+24 more)
(+174 files in other folders)
