[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-atabey"
version = "0.1.0"
description = "Streaming-first experimental lineage tracker for 3D+time embryonic cell videos."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.11",
  "zarr>=2.18",
  "networkx>=3.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"
markers = [
  "slow: integration tests that need local competition data or trained weights",
]
