[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-atabey"
version = "0.1.0"
description = "Streaming-first experimental lineage tracker for 3D+time embryonic cell videos."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scipy>=1.11",
  "zarr>=2.18",
  "networkx>=3.2",
]

[project.optional-dependencies]
official-metrics = [
  "tracking-cellmot @ git+https://github.com/royerlab/kaggle-cell-tracking-competition.git@075fc5f5a52d11077f9dc2b074644618f26939e2",
  "tracksdata @ git+https://github.com/royerlab/tracksdata.git@39dccf3a243e44274759468cb31b2ad9e7fc1d09",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-p no:cacheprovider"
markers = [
  "slow: integration tests that need local competition data or trained weights",
]
